style.css
:root{
    --border-radius: 20px;

    /* BACKGROUND GRADIENT */
    --soft-violet: hsl(273, 75%, 66%);
    --soft-blue: hsl(240, 73%, 65%);

    /* TEXT */
    --Very-dark-desaturated-blue: hsl(238, 29%, 16%);
    --Soft-red: hsl(14, 88%, 65%);
    --very-dark-grayish-blue: hsl(237, 12%, 33%);
    --dark-grayish-blue: hsl(240, 6%, 50%);

    /* DIVIDERS */
    --light-grayish-blue: hsl(240, 5%, 91%);
}

*{
    margin: 0;
    padding: 0;
    font-family: 'Kumbh Sans', sans-serif;
    -webkit-box-sizing: border-box;
            box-sizing: border-box;
    color: black;
}

html{
    background: linear-gradient(180deg, var(--soft-violet) 0%, var(--soft-blue) 100%); 
}

body{
    font-size: 12px;
    min-height: 100vh;
    display: grid;
}

#container{
    width: 70%;
    justify-self: center;
    align-self: center;
    box-shadow: 0px 11px 16px 0px rgba(0,0,0,0.31);
    -webkit-box-shadow: 0px 11px 16px 0px rgba(0,0,0,0.31);
    -moz-box-shadow: 0px 11px 16px 0px rgba(0,0,0,0.31);
    border-radius: var(--border-radius);
    background-color: #fff;
}

#card-wrapper{
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 3em;
}


#card-images{
    background-image: url('images/illustration-woman-online-desktop.svg'), url('images/bg-pattern-desktop.svg');
    background-size: 40em auto, 60em auto, cover;
    background-repeat: no-repeat;
    background-position-x: -7em, -27em;
    background-position-y: 50%, 70%;

    display: grid;
    justify-content: center;
    align-content: center;
}

#card-images img{
    display: none;
}

#card-text{
    width: 80%;
    padding-top: 4em;
    padding-bottom: 4em;
}

#card-text h1{
    margin-bottom: 1em;
}

.faq, .faq-active{
    display: flex;
    align-content: center;
    justify-content: space-between;
}

.arrow-box{
    align-self: center;
}

.faq p{
    font-size: 1.2em;
    font-weight: 400;
    margin-top: 2em;
    margin-bottom: 2em;
    color: var(--very-dark-grayish-blue);
}

.faq p:hover{
    color: var(--Soft-red);
    cursor: pointer;
}

.faq-active p{
    font-size: 1.2em;
    font-weight: 700;
    margin-top: 2em;
    margin-bottom: 2em;
    cursor: pointer;
}

.faq-container p.description{
    display: none;
}

.faq-container p.description-show{
    font-size: 1.1em;
    font-weight: 400;
    color: var(--dark-grayish-blue);

    margin-bottom: 2em;
}

img.arrow{
    width: 0.9em;
    height: auto;
    cursor: pointer;
}

hr{
    border: 1px solid var(--light-grayish-blue);
}


@media screen and (max-width:850px){
    #container{
        margin-top: 12em;
        margin-bottom: 12em;
        width: 90%;
    }

    #card-wrapper{
        grid-template-columns: 1fr;
        gap: 0;
    }

    #card-images{
        background-image: none;
        margin: 0 auto;
        width: 85%;
        height: auto;
        margin-top: -10em;
    }

    #card-images img{
        display: block;
        min-width: 20em;
        height: auto;
        width: 100%;
    }

    #card-images img#img-main{
        margin-left: -2em;
        width: 28em;
        height: auto;
        object-fit: cover;
        
    }

    #card-images img#img-shadow{
        margin: 0 auto;
        margin-right: -0.1em;
        margin-top: -9em;
        width: 95%;
    }

    #card-text{
        margin: 0 auto;
        padding-top: 0;
    }

    #card-text h1{
        text-align: center;
        margin-top: 1.5em;
        margin-bottom: 0;
    }
}

/* @media screen and (max-width: 440px){

} */

